fix: footer shift down

--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
     box-sizing: border-box;
   }
 
+  body {
+    min-height: 100vh;
+    margin: 0; padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
 .header {
     border: 1px solid red;
 }
